perf(Performing code): :zap:

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
           "alphabetize": { "order": "asc", "ignoreCase": true }
         }
       ],
-      "no-unused-vars": "warn"
+      "no-unused-vars": "warn",
+      "array-callback-return": "off"
     }
   }
